@@ -1,3 +1,7 @@
+2006-05-25  Derek Price  <derek@ximbiot.com>
+
+	* configure.in: Accept --with-rsh argument to set RSH_DFLT in config.h.
+
 2006-04-27  Derek Price  <derek@ximbiot.com>
 
 	* acinclude.m4 (ACX_WITH_GSSAPI): Detect libgss for HP-UX.
